--- a/package.json
+++ b/package.json
@@ -1,30 +1,8 @@
 {
   "name": "terminal-vue",
-  "version": "0.0.3",
-  "files": ["dist"],
-  "main": "./dist/terminal-vue.umd.js",
-  "module": "./dist/terminal-vue.es.js",
-  "exports": {
-    ".": {
-      "import": "./dist/terminal-vue.es.js",
-      "require": "./dist/terminal-vue.umd.js"
-    },
-    "./style": "./dist/style.css"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "terminal.css": "^0.7.2",
-    "vue": "^3.2.25"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.12",
-    "@vitejs/plugin-vue": "^2.0.0",
-    "typescript": "^4.4.4",
-    "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
-  }
+  "packageManager": "yarn@3.2.0",
+  "workspaces": [
+    "./components",
+    "histoire"
+  ]
 }
