--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "esModuleInterop": true,
     "lib": ["esnext", "dom"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/shims-vue.d.ts", "shims-vue.d.ts"]
+  "include": ["components/**/*.ts", "components/**/*.d.ts", "components/**/*.tsx", "components/**/*.vue", "components/shims-vue.d.ts", "shims-vue.d.ts"]
 }
