--- a/components/progress_bar/package.json
+++ b/components/progress_bar/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "progress-bar",
+    "name": "progress_bar",
     "main": "dist/progress-bar.cjs.js",
     "module": "dist/progress-bar.es.js",
     "unpkg": "dist/progress-bar.iife.js"
