--- a/histoire/package.json
+++ b/histoire/package.json
@@ -6,11 +6,11 @@
     "story:build": "histoire build"
   },
   "devDependencies": {
-    "histoire": "^0.2.5",
+    "histoire": "^0.3.0",
     "vite": "^2.9.5"
   },
   "dependencies": {
-    "terminal.css": "^0.7.2",
+    "@jfitzsimmons2/components": "workspace:*",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   }
