--- a/histoire/package.json
+++ b/histoire/package.json
@@ -6,7 +6,9 @@
     "story:build": "histoire build"
   },
   "devDependencies": {
-    "histoire": "^0.3.0",
+    "@histoire/plugin-screenshot": "^0.4.6",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "histoire": "^0.4.6",
     "vite": "^2.9.5"
   },
   "dependencies": {
