--- a/histoire/package.json
+++ b/histoire/package.json
@@ -6,10 +6,11 @@
     "story:build": "histoire build"
   },
   "devDependencies": {
-    "@histoire/plugin-screenshot": "^0.4.6",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "histoire": "^0.4.6",
-    "vite": "^2.9.5"
+    "@histoire/plugin-screenshot": "^0.11.7",
+    "histoire": "^0.11.7",
+    "@histoire/plugin-vue": "^0.11.7",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "vite": "^3.0.5"
   },
   "dependencies": {
     "@jfitzsimmons2/components": "workspace:*",
