--- a/components/package.json
+++ b/components/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
+    "@vueuse/core": "^9.5.0",
     "vue-router": "^4.0.14"
   }
 }
