formatting, adding input text

--- a/components/package.json
+++ b/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jfitzsimmons2/components",
+  "name": "terminalvue",
   "devDependencies": {
     "@iconify/vue": "^3.2.1",
     "glob": "^8.0.1",
