--- a/histoire/package.json
+++ b/histoire/package.json
@@ -5,15 +5,16 @@
     "story:build": "histoire build"
   },
   "devDependencies": {
-    "@histoire/plugin-screenshot": "^0.11.7",
-    "histoire": "^0.11.7",
-    "@histoire/plugin-vue": "^0.11.7",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "vite": "^3.0.5"
+    "@histoire/plugin-screenshot": "^0.15.8",
+    "@histoire/plugin-vue": "^0.15.8",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "histoire": "^0.15.8",
+    "sass": "^1.51.0",
+    "vite": "^3.2.5"
   },
   "dependencies": {
-    "@jfitzsimmons2/components": "workspace:*",
-    "vue": "^3.2.33",
-    "vue-router": "^4.0.14"
+    "terminalvue": "workspace:*",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   }
 }
